fix small spacing glitch on dashboard widgets

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -230,6 +230,7 @@ edit-in-place p.editable:hover {
 .widget-wrapper {
   .body-container {
     filters {
+      display: block;
       padding-left: 15px;
     }
   }
